使用 Colaboratory 建立

--- a/0517.ipynb
+++ b/0517.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxbDg7cXQeGiolNhnckWeA",
+      "authorship_tag": "ABX9TyNsLwGy+uhHFAZDjC3Cyuo6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "id": "57_DfVf1zaTf",
         "outputId": "c58a13d9-da7f-4e1a-ff42-4fbcc31c3924"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,37 +56,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "print(\"今天會下雨嗎？\")\n",
+        "b=input( )\n",
+        "if b==\"y\" or b== \"Y\" :\n",
+        "  print(\"要帶傘\")\n",
+        "elif b==\"n\" or b==\"N\":\n",
+        "  print(\"不用帶傘\")\n",
+        "else:\n",
+        "  print(\"輸入錯誤 無法判斷\")"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RPcyzFOeypaF",
-        "outputId": "20056c3d-e178-47d4-dd32-cf46027d65dd"
+        "id": "pugr151VIBcV",
+        "outputId": "28a0a6f4-92db-48ef-8e6c-1efa8cab9301"
       },
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "score: 50\n",
-            "Grade is: F\n"
+            "今天會下雨嗎？\n",
+            "N\n",
+            "不用帶傘\n"
           ]
         }
-      ],
-      "source": [
-        "score = int(input(\"score: \"))\n",
-        "if score >= 90:\n",
-        "    print('Grade is: A')\n",
-        "elif score >= 80:\n",
-        "    print('Grade is: B')\n",
-        "elif score >= 70:\n",
-        "    print('Grade is: C')\n",
-        "elif score >= 60:\n",
-        "    print('Grade is: D')\n",
-        "else:\n",
-        "    print('Grade is: F')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9Gh9UYgmI8ir"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -108,7 +115,7 @@
         "id": "DeZUptj3zzEN",
         "outputId": "ebad8502-1ef7-4eb5-a53e-4049eaccbd56"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +149,7 @@
         "id": "m7qLBULr2Dio",
         "outputId": "3ae7113a-16e3-424f-9487-fa9610eb5d21"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +183,7 @@
         "id": "EjeZZc7P234s",
         "outputId": "148394c1-01eb-46c3-c004-ef1bdfac8690"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +218,7 @@
         "id": "OZpiX58G6-9f",
         "outputId": "af8e66b9-ef28-4475-d355-4904c5dfb665"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
